# remotion-workspace-setup

./: .gitattributes  README.md  fix-assets.sh  setup-platypus.sh  setup.sh
langston-studio/: README.md  package-lock.json  package.json
langston-studio/resources/workspace-template/: .gitignore  AGENTS.md  opencode.jsonc  package-lock.json  package.json  remotion.config.ts
langston-studio/resources/workspace-template/src/: Root.tsx  Welcome.tsx  WorkspaceChallenge.tsx  index.css
langston-studio/src-tauri/: Cargo.toml  tauri.conf.json
langston-studio/src-tauri/icons/: icon.icns
langston-studio/src-tauri/src/: lib.rs  proxy.rs
workspace/: .prettierrc  AGENTS.md  opencode.jsonc  package-lock.json  package.json  remotion.config.ts
workspace/.opencode/skill/beatoven-audio/: SKILL.md
workspace/.opencode/skill/beatoven-audio/rules/: generate-track.md
workspace/my-video/: package.json  tsconfig.json
workspace/my-video/src/: HelloWorld.tsx  Root.tsx
workspace/src/: Root.tsx  Welcome.tsx
