[package]
name = "langston-studio"
version = "0.3.14"
description = "Langston Videos Studio - OpenCode + Remotion"
authors = ["Langston Co"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = "0.4"
sentry = "0.34"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
dirs = "5"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
